--- a/CompilerTest/CMakeLists.txt
+++ b/CompilerTest/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
-project(TEST_with_Sebi)
+project(CompilerTest)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(TEST_with_Sebi main.cpp)
+add_executable(CompilerTest main.cpp)
